--- a/digital-wallet-frontend/src/components/HomePage.css
+++ b/digital-wallet-frontend/src/components/HomePage.css
@@ -501,3 +501,11 @@ section {
   opacity: 1;
   transform: translateY(0);
 }
+
+.card-content.hover-trigger {
+  animation: showData 0.6s ease forwards;
+}
+
+.card-article.hide .card-content {
+  animation: removeData 0.6s ease forwards;
+}
